# MCP-server

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  PROJECT_STRUCTURE.md  README-DEVELOPMENT.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  generate_hash.py  pyproject.toml  readme.md  startup.sh  wait-for-it.sh
app/api/: auth_routes.py  context_routes.py  file_routes.py  monitoring_routes.py  processing_routes.py  stream_routes.py
app/core/: context_manager.py  data_processor.py  file_manager.py  user_manager.py
app/models/: pydantic_models.py
monitoring/: prometheus.yml
scripts/: fix_metadata.py
templates/: upload.html
